crates/conf/macros/tests/fails/bad_type_enum.rs
use conf_macros::Config;

#[derive(Config)]
enum TestConfig {
    Foo,
    Bar,
}

fn main() {}
